# gitsta-coreapi

./: .gitignore  Cargo.toml  README.md  build-i686-linux-android.sh  build-x86_64-linux-android.sh  build.sh  gitstacoreapi.code-workspace  setenv.sh
src/: actions.rs  lib.rs
src/actions/: git.rs  githost.rs
src/actions/git/: clone.rs
src/actions/githost/: account.rs  provider.rs
